# modu-play

./: .gitignore  README.MD
Hardware/: carts.kicad_sym
Hardware/arducart/: arducart.kicad_pcb  arducart.kicad_prl  arducart.kicad_pro  arducart.kicad_sch
Hardware/carts.pretty/: Arduino_Pro_Mini.kicad_mod  Arduino_Pro_Mini_Sides_Only.kicad_mod  ESP32C3.kicad_mod  Edge_Connector.kicad_mod  Logo.kicad_mod  Logo_Text.kicad_mod  Pi_Zero_2.kicad_mod  PinHeader_1x01_Abstract.kicad_mod  PinHeader_1x02_Abstract.kicad_mod  PinHeader_1x07_Abstract.kicad_mod  PinHeader_1x09_Abstract.kicad_mod
Hardware/moduplay/: local.kicad_sym  moduplay.kicad_pcb  moduplay.kicad_prl  moduplay.kicad_pro  moduplay.kicad_sch
Hardware/moduplay/local.pretty/: Edge_Connector_Slot.kicad_mod  Power_Port.kicad_mod  Power_Port_Single_Minus.kicad_mod  Power_Port_Single_Plus.kicad_mod  Power_Switch.kicad_mod  Screen_Full.kicad_mod  Screen_Port.kicad_mod
Hardware/testcart/: testcart.kicad_pcb  testcart.kicad_prl  testcart.kicad_pro  testcart.kicad_sch
Software/Arducard/: Makefile
Software/Arducard/lib/include/: arduino.h  ioports.h
Software/Arducard/src/: buttons.c  buttons.h  main.c  oled.c  oled.h  screen.c  screen.h  screenbuffer.c  screenbuffer.h
Software/Simulator/: CMakeLists.txt
Software/Simulator/assets/: converter.py
Software/Simulator/src/: assets.c  assets.h  canvas.c  core.c  input.c  main.c  moduplay.h  mpcore.h
